--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,7 @@
-#login-form{
-	display: none;
+.main-pane .panel-heading {
+    background-color: #FDFDFD;
+}
+
+body {
+    background-color: #F6F6F6;
 }
